--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,32 @@
 site_name: Rahul Notes
 
-nav:
-  - Homepage: 'index.md'
-  - Docker: docker/docker-notes.md
-  - Wiremock: wiremock/wiremock.md
-
 theme:
   name: material
+  features:
+    - navigation.tabs
+    - navigation.sections
+    - toc.integrate
+    - navigation.top
+    - search.suggest
+    - search.highlight
+    - content.tabs.link
+  language: en
+  palette:
+    - scheme: default
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
+      primary: 4051b5
+      accent: purple
+    - scheme: slate
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
+      primary: teal
+      accent: lime
+  plugins:
+    - social
+    - search
 
 markdown_extensions:
   - toc:
